infrastructure/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anthra-api
  namespace: anthra
  labels:
    app: anthra-api
    component: api
    version: v1.0.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: anthra-api
  template:
    metadata:
      labels:
        app: anthra-api
        component: api
    spec:
      # TODO: Create custom ServiceAccount with minimal RBAC
      containers:
        - name: api
          image: anthra/api:latest  # TODO: Pin to specific version tag
          ports:
            - containerPort: 8080
              name: http
